enum DeepestEnum {
  A=1;
  B=2;
  C=3;
}

message DeepestMessage {
  optional DeepestEnum field = 1 [default = B];
}
